// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resetPassword mutation throws error if password is not valid 1`] = `"Password must be at least 8 characters"`;

exports[`resetPassword mutation throws error if token is not valid 1`] = `"Token is either invalid or expired"`;

exports[`resetPassword mutation updates user password and updates cookie 1`] = `
Array [
  "token",
  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiJ0ZXN0SWQiLCJpYXQiOjE1NDMyNDE2MDZ9.pvuxlFHMguOedl_DDC8bYZqTW7Bjku-xTiKDEryuiws",
  Object {
    "httpOnly": true,
    "maxAge": 7776000000,
    "secure": false,
  },
]
`;

exports[`resetPassword mutation updates user password and updates cookie 2`] = `
Array [
  Object {
    "data": Object {
      "password": "$2y$12$ojbf3vJgxk.0q617vyZF8uge/KgjM9biFF9l.OFjqkbnouZPNkEdy",
      "token": null,
      "tokenExpiry": null,
    },
    "where": Object {
      "email": "test@email.io",
    },
  },
]
`;

exports[`resetPassword mutation updates user password and updates cookie 3`] = `
Object {
  "email": "test@email.io",
  "id": "testId",
  "pendingEmail": null,
  "permissions": Array [
    "USER",
  ],
  "profile": null,
  "token": null,
  "tokenExpiry": null,
}
`;
